--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "babel-plugin-transform-class-properties": "^6.11.5",
+    "faker": "^3.1.0",
     "knex": "^0.11.10",
     "meteor-node-stubs": "~0.2.0",
     "pg": "^6.1.0",
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^6.1.2",
-    "eslint": "^3.3.1"
+    "eslint": "^3.3.1",
+    "underscore": "^1.8.3"
   }
 }
