--- a/.eslintrc
+++ b/.eslintrc
@@ -60,10 +60,10 @@
      */
     "no-shadow": 2,                  // http://eslint.org/docs/rules/no-shadow
     "no-shadow-restricted-names": 2, // http://eslint.org/docs/rules/no-shadow-restricted-names
-    "no-unused-vars": [2, {          // http://eslint.org/docs/rules/no-unused-vars
-      "vars": "local",
-      "args": "after-used"
-    }],
+//    "no-unused-vars": [2, {          // http://eslint.org/docs/rules/no-unused-vars
+//      "vars": "local",
+//      "args": "after-used"
+//    }],
     "no-use-before-define": [2, "nofunc"],    // http://eslint.org/docs/rules/no-use-before-define
 
     /**
@@ -146,8 +146,8 @@
      */
     "indent": [2, 2],                // http://eslint.org/docs/rules/indent
     "brace-style": [1,               // http://eslint.org/docs/rules/brace-style
-      "1tbs", {
-        "allowSingleLine": true
+      "stroustrup", {
+        "allowSingleLine": false
       }],
     "quotes": [
       1, "single", "avoid-escape"    // http://eslint.org/docs/rules/quotes
@@ -185,10 +185,8 @@
       "before": false,
       "after": true
     }],
-    "space-after-keywords": 2,       // http://eslint.org/docs/rules/space-after-keywords
     "space-before-blocks": 2,        // http://eslint.org/docs/rules/space-before-blocks
     "space-infix-ops": 2,            // http://eslint.org/docs/rules/space-infix-ops
-    "space-return-throw-case": 2,    // http://eslint.org/docs/rules/space-return-throw-case
     "space-unary-ops": 0,            // http://eslint.org/docs/rules/space-unary-ops
     "spaced-comment": 2,             // http://eslint.org/docs/rules/spaced-comment
   }
