--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "aws-sdk": "^2.5.2",
     "babel-plugin-transform-class-properties": "^6.11.5",
     "faker": "^3.1.0",
     "knex": "^0.11.10",
     "meteor-node-stubs": "~0.2.0",
+    "mongodb": "^2.2.7",
     "pg": "^6.1.0",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
