--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "aws-sdk": "^2.5.2",
     "babel-plugin-transform-class-properties": "^6.11.5",
+    "deepmerge": "^0.2.10",
+    "easyimage": "^2.1.0",
     "faker": "^3.1.0",
     "knex": "^0.11.10",
     "meteor-node-stubs": "~0.2.0",
