--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "pg": "^6.1.0",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
-    "react-router": "^2.6.1"
+    "react-router": "^2.6.1",
+    "request": "^2.74.0"
   },
   "devDependencies": {
     "babel-eslint": "^6.1.2",
