--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "deepmerge": "^0.2.10",
     "easyimage": "^2.1.0",
     "faker": "^3.1.0",
+    "fluent-ffmpeg": "^2.1.0",
     "knex": "^0.11.10",
     "meteor-node-stubs": "~0.2.0",
     "mongodb": "^2.2.7",
     "pg": "^6.1.0",
+    "pg-live-select": "^1.0.3",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-router": "^2.6.1",
