--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,9 @@
 .utilities/generate/json
 .utilities/generate/sql
 .vagrant/
-client/fonts/
-client/images/
+public/fonts/
+images/
 local.js*
 node_modules/
+npm-debug.log
 public/
