--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "rangeslider.js": "^2.2.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "react-dropzone": "^3.6.0",
     "react-router": "^2.6.1",
     "request": "^2.74.0",
     "sqlite3": "^3.1.4"
