--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "pg-native": "^1.10.0",
     "rangeslider.js": "^2.2.1",
     "react": "^15.3.0",
+    "react-date-picker": "^5.3.28",
+    "react-datepicker": "^0.29.0",
     "react-dom": "^15.3.0",
     "react-dropzone": "^3.6.0",
     "react-router": "^2.6.1",
