--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "faker": "^3.1.0",
     "ffprobe": "^1.1.0",
     "fluent-ffmpeg": "^2.1.0",
+    "flux": "^2.1.1",
     "jquery": "^3.1.0",
     "knex": "^0.11.10",
     "malihu-custom-scrollbar-plugin": "^3.1.5",
