--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@
 .utilities/generate/json
 .utilities/generate/sql
 .vagrant/
-public/fonts/
 images/
-local.js*
+server/local.js*
 node_modules/
 npm-debug.log
 public/
+settings.json
