new file hierarchy

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 .DS_Store
 .idea/
-.meteor/local/
-.utilities/generate/json
-.utilities/generate/sql
+meteor/.meteor/local/
+generate/json
+generate/sql
 .vagrant/
 images/
-server/local.js*
-node_modules/
+local.js*
+node_modules
+meteor/node_modules
 npm-debug.log
 public/
-settings.json
+meteor/settings.json
