--- a/meteor/package.json
+++ b/meteor/package.json
@@ -5,41 +5,34 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "autoresize-textarea": "^1.1.3",
-    "aws-sdk": "^2.5.2",
+    "aws-sdk": "^2.6.4",
     "babel-plugin-transform-class-properties": "^6.11.5",
     "bcrypt": "^0.8.7",
-    "bootstrap": "^3.3.7",
-    "bower": "^1.7.9",
     "deepmerge": "^0.2.10",
     "easyimage": "^2.1.0",
     "faker": "^3.1.0",
-    "ffprobe": "^1.1.0",
     "fluent-ffmpeg": "^2.1.0",
     "flux": "^2.1.1",
-    "jquery": "^3.1.0",
     "knex": "^0.11.10",
-    "malihu-custom-scrollbar-plugin": "^3.1.5",
     "meteor-node-stubs": "~0.2.0",
-    "mongodb": "^2.2.7",
+    "moment": "^2.15.1",
+    "mongodb": "^2.2.10",
     "node-ffprobe": "^1.2.2",
     "pg": "^6.1.0",
     "pg-live-select": "^1.0.3",
     "pg-native": "^1.10.0",
     "randomstring": "^1.1.5",
-    "rangeslider.js": "^2.2.1",
-    "react": "^15.3.0",
+    "react": "^15.3.2",
     "react-date-picker": "^5.3.28",
-    "react-datepicker": "^0.29.0",
-    "react-dom": "^15.3.0",
+    "react-dom": "^15.3.2",
     "react-dropzone": "^3.6.0",
-    "react-router": "^2.6.1",
-    "request": "^2.74.0",
-    "sqlite3": "^3.1.4"
+    "react-router": "^2.8.1",
+    "request": "^2.75.0",
+    "sqlite3": "^3.1.4",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-eslint": "^6.1.2",
-    "eslint": "^3.3.1",
-    "underscore": "^1.8.3"
+    "eslint": "^3.5.0"
   }
 }
