fix: meteor static files

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,9 +7,15 @@ location @meteor {
 }
 
 location / {
-    if ($uri ~* \.(html|css|jswoff|otf|ttf|eot|svg|txt|pdf|docx?|xlsx?)$) {
-        gzip on;
-    }
+    #location ~* "^/[a-z0-9]{40}\.(css|js)$" {
+    #  root /var/local/var/www/browser;
+    #  access_log off;
+    #  expires max;
+    #}
+
+    #if ($uri ~* \.(html|css|jswoff|otf|ttf|eot|svg|txt|pdf|docx?|xlsx?)$) {
+    #    gzip on;
+    #}
     add_header Author "Taras Labiak <kissarat@gmail.com>";
     autoindex off;
 
