+ additiona; signup validation

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,7 @@
 location @meteor {
     proxy_pass http://127.0.0.1:3000;
     proxy_http_version 1.1;
+    proxy_read_timeout 300;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
     proxy_set_header IP $remote_addr;
