mod: multiple upstream in nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,25 +1,36 @@
-location @meteor {
-    proxy_pass http://127.0.0.1:3000;
-    proxy_http_version 1.1;
-    proxy_read_timeout 300;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-    proxy_set_header IP $remote_addr;
+upstream meteor {
+    server 127.0.0.1:3001;
+    server 127.0.0.1:3002;
 }
 
-location / {
-    #location ~* "^/[a-z0-9]{40}\.(css|js)$" {
-    #  root /var/local/var/www/browser;
-    #  access_log off;
-    #  expires max;
-    #}
+server {
+    listen      80;
+    server_name evart.com;
+    charset     utf-8;
 
-    #if ($uri ~* \.(html|css|jswoff|otf|ttf|eot|svg|txt|pdf|docx?|xlsx?)$) {
-    #    gzip on;
-    #}
-    add_header Author "Taras Labiak <kissarat@gmail.com>";
-    autoindex off;
+    location @meteor {
+        proxy_pass http://meteor;
+        proxy_http_version 1.1;
+        proxy_read_timeout 300;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header IP $remote_addr;
+    }
 
-    root /usr/local/var/www;
-    try_files $uri @meteor;
+    location / {
+        #location ~* "^/[a-z0-9]{40}\.(css|js)$" {
+        #  root /var/local/var/www/browser;
+        #  access_log off;
+        #  expires max;
+        #}
+
+        #if ($uri ~* \.(html|css|jswoff|otf|ttf|eot|svg|txt|pdf|docx?|xlsx?)$) {
+        #    gzip on;
+        #}
+        add_header Author "Taras Labiak <kissarat@gmail.com>";
+        autoindex off;
+
+        root /usr/local/var/www;
+        try_files $uri @meteor;
+    }
 }
