--- a/meteor/package.json
+++ b/meteor/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.15.1",
     "mongodb": "^2.2.10",
     "node-ffprobe": "^1.2.2",
+    "optimist": "^0.6.1",
     "pg": "^6.1.0",
     "pg-live-select": "^1.0.3",
     "pg-native": "^1.10.0",
