--- a/nginx.conf
+++ b/nginx.conf
@@ -104,4 +104,20 @@ http {
             proxy_set_header IP $remote_addr;
         }
     }
+
+    server {
+        listen 80;
+        server_name monitor.evart.com;
+        charset     utf-8;
+        client_max_body_size 64k;
+
+        location / {
+            #limit_conn zone=one limit_per_ip 8;
+            autoindex off;
+            proxy_pass http://127.0.0.1;
+            proxy_http_version 1.1;
+            proxy_read_timeout 7200;
+            proxy_set_header x-forwarded-for $remote_addr;
+        }
+    }
 }
