--- a/meteor/package.json
+++ b/meteor/package.json
@@ -15,6 +15,7 @@
     "flux": "^2.1.1",
     "fs-extra": "^0.30.0",
     "gulp": "^3.9.1",
+    "gulp-sequence": "^0.4.6",
     "knex": "^0.11.10",
     "meteor-node-stubs": "~0.2.0",
     "moment": "^2.15.1",
