--- a/nginx-dev.conf
+++ b/nginx-dev.conf
@@ -41,7 +41,7 @@ http {
             proxy_read_timeout 300;
             proxy_set_header upgrade $http_upgrade;
             proxy_set_header connection "upgrade";
-            proxy_set_header ip $remote_addr;
+            proxy_set_header "X-Forwarded-For" $remote_addr;
         }
 
         location / {
