--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
 .DS_Store
 .idea/
-meteor/.meteor/local/
+.vagrant/
 generate/json
 generate/sql
-.vagrant/
 images/
 local.js*
-node_modules
-meteor/node_modules
-npm-debug.log
-public/
+meteor/.meteor/local/
 meteor/settings.json
+node_modules
+npm-debug.log
+public/fonts/
+public/images/
+public/thumb/
