--- a/nginx-dev.conf
+++ b/nginx-dev.conf
@@ -35,6 +35,10 @@ http {
         charset     utf-8;
         client_max_body_size 64k;
 
+        error_page 403 /pages/403.html;
+        error_page 404 /pages/404.html;
+        error_page 502 /pages/502.html;
+
         location @meteor {
             proxy_pass http://meteor;
             proxy_http_version 1.1;
