--- a/nginx-dev.conf
+++ b/nginx-dev.conf
@@ -46,6 +46,8 @@ http {
             proxy_set_header upgrade $http_upgrade;
             proxy_set_header connection "upgrade";
             proxy_set_header "X-Forwarded-For" $remote_addr;
+            proxy_set_header Refrerer     $ref;
+            proxy_set_header User-Agent   $ua;
         }
 
         location / {
