--- a/nginx.conf
+++ b/nginx.conf
@@ -105,7 +105,9 @@ http {
             proxy_pass http://upload;
             proxy_http_version 1.1;
             proxy_read_timeout 600;
-            proxy_set_header IP $remote_addr;
+            proxy_set_header "X-Forwarded-For" $remote_addr;
+            proxy_set_header Refrerer     $ref;
+            proxy_set_header User-Agent   $ua;
         }
     }
 
