--- a/nginx/dev.conf
+++ b/nginx/dev.conf
@@ -46,8 +46,7 @@ http {
             proxy_set_header upgrade $http_upgrade;
             proxy_set_header connection "upgrade";
             proxy_set_header "X-Forwarded-For" $remote_addr;
-            proxy_set_header Refrerer     $ref;
-            proxy_set_header User-Agent   $ua;
+            proxy_pass_request_headers on;
         }
 
         location / {
@@ -55,6 +54,7 @@ http {
             limit_rate 256k;
 
             add_header author "Taras Labiak <kissarat@gmail.com>";
+            add_header 'Access-Control-Allow-Origin' '*';
             autoindex off;
 
             root /usr/local/var/www;
