--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -30,16 +30,18 @@ http {
 
     server {
         listen  80;
-        include common.conf;
+        include /home/admin/evart/nginx/common.conf;
     }
 
     server {
         listen              443 ssl;
+        ssl on;
+        # cat evart_com.crt COMODORSADomainValidationSecureServerCA.crt COMODORSAAddTrustCA.crt > bundle.crt
         ssl_certificate     /home/admin/keys/evart_com.crt;
         ssl_certificate_key /home/admin/keys/server.key;
         ssl_protocols       TLSv1.2;
         ssl_ciphers         HIGH;
-        include             common.conf;
+        include             /home/admin/evart/nginx/common.conf;
     }
 
     server {
