--- a/meteor/package.json
+++ b/meteor/package.json
@@ -5,11 +5,12 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "aws-sdk": "^2.6.4",
+    "aws-sdk": "^2.6.9",
     "babel-plugin-transform-class-properties": "^6.11.5",
     "bcrypt": "^0.8.7",
-    "deepmerge": "^0.2.10",
+    "deepmerge": "^1.2.0",
     "easyimage": "^2.1.0",
+    "elka": "^1.1.0",
     "faker": "^3.1.0",
     "fluent-ffmpeg": "^2.1.0",
     "flux": "^2.1.1",
@@ -32,13 +33,12 @@
     "react-dropzone": "^3.6.0",
     "react-router": "^2.8.1",
     "request": "^2.75.0",
-    "schema-db": "^1.0.2",
-    "sqlite3": "^3.1.4",
+    "sqlite3": "^3.1.6",
     "tar.gz": "^1.0.5",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "babel-eslint": "^6.1.2",
-    "eslint": "^3.5.0"
+    "babel-eslint": "^7.0.0",
+    "eslint": "^3.8.0"
   }
 }
