Refactoring requires in meteor/server. Problem with nginx/dev.conf in macOS

--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -34,7 +34,7 @@ http {
     }
 
     server {
-        listen              443 ssl;
+        listen              443 ssl http2;
         ssl on;
         # cat evart_com.crt COMODORSADomainValidationSecureServerCA.crt COMODORSAAddTrustCA.crt > bundle.crt
         ssl_certificate     /home/admin/keys/evart_com.crt;
